[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_level = "INFO"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.mypy]
python_version = "3.8"
follow_imports = "silent"
namespace_packages = true
explicit_package_bases = true
strict = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,flake8,bandit,mypy,report

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310,flake8,bandit,mypy
    3.11: py311

[testenv]
usedevelop = true
setenv =
  py{38,39,310,311}: COVERAGE_FILE = .coverage.{envname}
deps =
  -e{toxinidir}[tests]

commands = pytest --cov --cov-report= {posargs}

passenv = *

[testenv:flake8]
basepython = python3.10
skip_install = true
deps =
  flake8
  flake8-bugbear
commands = flake8 src/ tests/

[testenv:bandit]
basepython = python3.10
skip_install = true
deps =
  bandit[toml]
commands = bandit -q -c pyproject.toml -r src

[testenv:mypy]
basepython = python3.10
deps =
    -e{toxinidir}
    mypy
    mitogen
commands = mypy -p suitable

[testenv:report]
deps =
  coverage
skip_install = true
commands =
  coverage combine
  coverage report -m

"""
