[metadata]
name = suitable
version = 0.19.1
url = http://github.com/seantis/suitable/
author = Denis Krienbühl
author_email = denis@href.ch
maintainer = Seantis GmbH
maintainer_email = info@seantis.ch
description = Suitable is a thin wrapper around the Ansible API.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPLv3
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
include_package_data = True
package_dir =
     = src
packages =
    suitable
python_requires = >= 3.8
platforms = any
install_requires =
    ansible>=2.8
    ansible-core
    ansible-base

[options.extras_require]
dev =
    bandit[toml]
    flake8
    flake8-bugbear
    pre-commit
    mypy
    tox
tests =
    mitogen>=0.3.7
    paramiko
    port-for
    pytest
    pytest-codecov[git]

[options.package_data]
suitable =
    py.typed

[flake8]
extend-select = B901,B903,B904,B908
exclude=.venv,.git,.tox,dist,docs,*lib/python*,*egg,build

[bdist_wheel]
universal = 1
