[metadata]
name = suitable
version = 0.20.3
url = http://github.com/seantis/suitable/
author = Denis Krienbühl
author_email = denis@href.ch
maintainer = Seantis GmbH
maintainer_email = info@seantis.ch
description = Suitable is a thin wrapper around the Ansible API.
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
license = GPLv3
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
include_package_data = True
package_dir =
     = src
packages =
    suitable
python_requires = >= 3.8
platforms = any
install_requires =
    ansible>=6
    ansible-core>=2.13
    packaging

[options.extras_require]
dev =
    bump-my-version
    bandit[toml]
    flake8
    flake8-bugbear
    flake8-pyi
    mypy
    pre-commit
    pyyaml
    tox
    types-pyyaml
tests =
    mitogen>=0.3.7
    paramiko
    port-for
    pytest
    pytest-codecov[git]

[options.package_data]
suitable =
    py.typed

[flake8]
extend-select = B901,B903,B904,B908
exclude=.venv,.git,.tox,dist,docs,*lib/python*,*egg,build
per_file_ignores =
    *.pyi: B,E301,E302,E305,E501,E701,F401,F403,F405,F822,Y065

[bdist_wheel]
universal = 1
